2021-01-22  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c: Fix the VORG bug reported in
	https://tug.org/pipermail/dvipdfmx/2021-January/000193.html
	* configure.ac: Version 20210122.

2021-01-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfximage.c: Dvipdfmx behavior changed. Now it stops
	processing and exits with non-zero exit status when image
	inclusion fails.
	* dvi.c: Ignore dvi_set with invalid gid when processing DVI
	files created by dvilua[la]tex.
	* dvipdfmx.c: Bump copyright year.
	* configure.ac: Version 20210116.

2021-01-15  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.c, dvipdfmx.c, pdfdoc.[ch]: Experimental support for
	dviluatex extended fnt_def. Separate annot_grow (linkmargin)
	for horizontal and vertical direction can be specified.
	* configure.ac: Version 20210115.

2021-01-10  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_read.c, t1_load.c: Fix a bug causing a segfault
	reported as dvipdfmx-upjf.test test failure. Add missing size
	tests for the data comparison.
	https://tug.org/pipermail/tlbuild/2021q1/004765.html

2021-01-09  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c, cidtype2.c, pdffont.[ch], type0.c: Fix a bug
	that vertical metrics are not written. Introduced in rev.56400.
	* configure.ac: Version 20210109.

2020-12-16  Karl Berry  <karl@freefriends.org>

	* dvipdfmx.c (show_usage): -f loads an additional map file,
	does not omit loading of default map(s).
	https://tug.org/pipermail/dvipdfmx/2020-December/000146.html

2020-12-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Fix a bug introduced in rev.56265: When the
	resource dictionary (of some resource category) is an indirect
	object and then pdf:put operation is done against that
	resource category, the operation fails. Now this situation is
	taken into account. (The content of old resource is merged
	into new one).
	* configure.ac: Version 20201216.

2020-12-14  Akira Kakuto  <kakuto@w32tex.org>
